# simple-model-checker

./: CMakeLists.txt  Readme.md  config.h.in  main.c  options.c  options.h  shell.c  shell.h
ctl-parser/: CMakeLists.txt  Readme.md  ctl-parser.y  ctl.lex  formula.c  formula.h  parser.c
ctl-parser/include/ctl-parser/: formula.h  heading.h  parser.h
ctl-parser/test/: CMakeLists.txt  parser-test.c
kripke/: CMakeLists.txt  Readme.md  kripke.c
kripke/include/kripke/: kripke.h
kripke/test/: CMakeLists.txt  four-state-kripke.json  kripke-test.c
model-checking/: CMakeLists.txt  Readme.md  model-checker.c
model-checking/include/model-checking/: model-checker.h
